Unify services texts

--- a/index.html
+++ b/index.html
@@ -542,8 +542,7 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
-                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete
-                                        i šetříte.</td>
+                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete i šetříte.</td>
                                     <td class="text-end"><span class="price-tag">od 1199&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
@@ -553,14 +552,12 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro (ne)plavce</td>
-                                    <td class="text-secondary">Speciální individuální lekce pro úplné začátečníky, děti
-                                        nebo nesmělé plavce.</td>
+                                    <td class="text-secondary">Individuální lekce pro úplné začátečníky, děti nebo nesmělé plavce.</td>
                                     <td class="text-end"><span class="price-tag">od 1199&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Rozbor techniky</td>
-                                    <td class="text-secondary">Profesionální videoanalýza a následná korekce stylu s
-                                        trenérem.</td>
+                                    <td class="text-secondary">Profesionální videoanalýza a následný rozbor stylu s trenérem.</td>
                                     <td class="text-end"><span class="price-tag">2999&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -597,23 +594,23 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
-                                    <td class="text-secondary">Trénink 2 osob se sdíleným trenérem.</td>
+                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete i šetříte.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Skupinové lekce</td>
-                                    <td class="text-secondary">Skupinový trénink podobných plavců.</td>
+                                    <td class="text-secondary">Trénink pro skupinku výkonnostně podobných plavců.</td>
                                     <td class="text-end"><span class="price-tag">od 999&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro (ne)plavce</td>
-                                    <td class="text-secondary">Speciální individuálka pro úplné začátečníky nebo děti.
+                                    <td class="text-secondary">Individuální lekce pro úplné začátečníky, děti nebo nesmělé plavce.
                                     </td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Rozbor techniky</td>
-                                    <td class="text-secondary">Videoanalýza a osobní feedback s trenérem.</td>
+                                    <td class="text-secondary">Profesionální videoanalýza a následný rozbor stylu s trenérem.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -650,22 +647,22 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
-                                    <td class="text-secondary">Trénink 2 osob pod dohledem jednoho trenéra.</td>
+                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete i šetříte.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Skupinové lekce</td>
-                                    <td class="text-secondary">Tréninková skupinka pro kolegy, kamarády…</td>
+                                    <td class="text-secondary">Trénink pro skupinku výkonnostně podobných plavců.</td>
                                     <td class="text-end"><span class="price-tag">od 899&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro (ne)plavce</td>
-                                    <td class="text-secondary">Individuální výuka i pro úplné začátečníky!</td>
+                                    <td class="text-secondary">Individuální lekce pro úplné začátečníky, děti nebo nesmělé plavce.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Rozbor techniky</td>
-                                    <td class="text-secondary">Videoanalýza stylu a odborná konzultace.</td>
+                                    <td class="text-secondary">Profesionální videoanalýza a následný rozbor stylu s trenérem.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -702,22 +699,22 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
-                                    <td class="text-secondary">Trénink ve dvou, který motivuje a baví.</td>
+                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete i šetříte.</td>
                                     <td class="text-end"><span class="price-tag">699&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Skupinové lekce</td>
-                                    <td class="text-secondary">Skupina kamarádů, kolegů nebo rodiny s trenérem.</td>
+                                    <td class="text-secondary">Trénink pro skupinku výkonnostně podobných plavců.</td>
                                     <td class="text-end"><span class="price-tag">od 799&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro (ne)plavce</td>
-                                    <td class="text-secondary">Vhodné i pro úplné začátečníky a děti.</td>
+                                    <td class="text-secondary">Individuální lekce pro úplné začátečníky, děti nebo nesmělé plavce.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Rozbor techniky</td>
-                                    <td class="text-secondary">Videoanalýza a osobní konzultace v Olomouci.</td>
+                                    <td class="text-secondary">Profesionální videoanalýza a následný rozbor stylu s trenérem.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -754,12 +751,12 @@
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
-                                    <td class="text-secondary">Trénink 2 osob se sdíleným trenérem.</td>
+                                    <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete i šetříte.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Skupinové lekce</td>
-                                    <td class="text-secondary">Skupinový trénink podobných plavců.</td>
+                                    <td class="text-secondary">Trénink pro skupinku výkonnostně podobných plavců.</td>
                                     <td class="text-end"><span class="price-tag">od 999&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
